@@ -1,3 +1,8 @@
+2009-09-30:
+
+	* Protocol-v2.html: Edits from Göran Weinholt
+	<goran@weinholt.se>
+
 2009-04-28:
 
 	* src/auth.c: pubkey_type should be shifted by 8, not 16.  It
